--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"clsx": "^2.0.0",
 		"next": "14.0.1",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-icons": "^4.11.0"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.2.1",
