--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.6.0",
 		"clsx": "^2.0.0",
 		"next": "14.0.1",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-icons": "^4.11.0"
+		"react-icons": "^4.11.0",
+		"react-loading-skeleton": "^3.3.1",
+		"react-query": "^3.39.3"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.2.1",
