--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"axios": "^1.6.0",
 		"clsx": "^2.0.0",
+		"framer-motion": "^10.16.4",
 		"next": "14.0.1",
 		"react": "^18",
 		"react-dom": "^18",
