--- a/package.json
+++ b/package.json
@@ -14,22 +14,28 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.7",
 		"axios": "^1.6.0",
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.16.4",
 		"next": "14.0.1",
+		"nextjs-progressbar": "^0.0.16",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^4.11.0",
 		"react-loading-skeleton": "^3.3.1",
-		"react-query": "^3.39.3"
+		"react-query": "^3.39.3",
+		"react-redux": "^8.1.3",
+		"react-redux-toastr": "^7.6.13"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.2.1",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-redux-toastr": "^7.6.5",
 		"prettier": "^3.0.3",
+		"prop-types": "^15.8.1",
 		"sass": "^1.69.5",
 		"typescript": "^5"
 	}
