--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-query": "^3.39.3",
 		"react-redux": "^8.1.3",
 		"react-redux-toastr": "^7.6.13",
+		"react-select": "^5.8.0",
 		"string-strip-html": "^13.4.3"
 	},
 	"devDependencies": {
@@ -44,6 +45,7 @@
 		"@types/react-dom": "^18",
 		"@types/react-draft-wysiwyg": "^1.13.7",
 		"@types/react-redux-toastr": "^7.6.5",
+		"@types/react-select": "^5.0.1",
 		"prettier": "^3.0.3",
 		"prop-types": "^15.8.1",
 		"sass": "^1.69.5",
