--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"draft-js": "^0.11.7",
 		"draftjs-to-html": "^0.9.1",
 		"framer-motion": "^10.16.5",
+		"html-react-parser": "^5.0.6",
 		"html-to-draftjs": "^1.5.0",
 		"js-cookie": "^3.0.5",
 		"next": "14.0.1",
