--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-redux": "^8.1.3",
 		"react-redux-toastr": "^7.6.13",
 		"react-select": "^5.8.0",
+		"react-simple-star-rating": "^5.1.7",
 		"string-strip-html": "^13.4.3"
 	},
 	"devDependencies": {
