--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react-redux-toastr": "^7.6.13",
 		"react-select": "^5.8.0",
 		"react-simple-star-rating": "^5.1.7",
+		"sharp": "^0.32.6",
 		"string-strip-html": "^13.4.3"
 	},
 	"devDependencies": {
