--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"baseUrl": "./src/",
+		"forceConsistentCasingInFileNames": false,
 		"paths": {
 			"@/layout/*": ["components/layout/*"],
 			"@/ui/*": ["components/ui/*"],
